# drink_water_tracker

./: .env.example  .env.sample  Dockerfile  README-PT-BR.md  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
drink_water_tracker/: alembic.ini  main.py
drink_water_tracker/db/: connection.py  models.py
drink_water_tracker/migrations/: env.py
drink_water_tracker/migrations/versions/: 47ec2650237f_add_water_consumption_table.py  5ae0b0c5e4d3_add_cup_size_table.py  7308aa43777b_update_names_of_relationships_in_the_.py  9e31f54d13d1_add_user_table.py  a17993dc7b23_update_fields_of_the_water_consumption_.py  aa29620e7b8e_update_names_of_relationships_in_the_.py  e9498ce28a98_update_drink_date_field_of_the_water_.py  f8f86ca56b74_update_the_relationships_of_the_water_.py
drink_water_tracker/routes/: cup_size_routes.py  deps.py  user_routes.py  water_consumption_routes.py
drink_water_tracker/schemas/: base.py  cup_size.py  user.py  water_consumption.py
drink_water_tracker/services/: water_consumption.py
drink_water_tracker/use_cases/: cup_size.py  user.py  water_consumption.py
tests/: conftest.py  test_main_health_check_route.py
tests/routes/: test_cup_size_routes.py  test_user_routes.py  test_water_consumption_routes.py
tests/schemas/: test_cup_size_schema.py  test_user_schema.py  test_water_consumption_schema.py
tests/services/: test_water_consumption_service.py
tests/use_cases/: test_cup_size_use_cases.py  test_user_use_cases.py  test_water_consumption_use_cases.py
